Fixed both search bars and added style & placeholder to them. Fixed Charts on ActiveAdmin/Dashboard. Fixed the style/layout issues, now each page can have a different style

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -77,6 +77,7 @@ body
 
 .alert
 {
+    position: absolute;
     z-index: 1;
     color: #ffffff;
     background-color: #343A40;
